# voidcat-reasoning-core

./: .dockerignore  .env.example  .gitignore  2.11.7  API Limitation Research.md  API.md  Albedo Supermemory.txt  BLACKBOX_COMPLETION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_FIX.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_SETUP_GUIDE.md  CLAUDE_DESKTOP_UPDATE_COMPLETE.md  CODEBASE_CLEANUP_COMPLETE.md  CODEY_JR_FILE_MANIPULATION_FIX.md  CONTRIBUTING.md  DEEPSEEK_R1_INTEGRATION_GUIDE.md  DEPLOYMENT_INFO.json  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCKER_ENHANCED_GUIDE.md  DOCKER_SUMMARY.md  DOCUMENTATION.md  Dockerfile  Dockerfile.mcp  E2E_EXECUTION_GUIDE.md  E2E_TEST_SUMMARY.md  ENHANCED_COMPONENTS.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  ENHANCED_MCP_TOOLS_DOCUMENTATION.md  ENHANCED_MEMORY_SUMMARY.md  ENHANCEMENT_SUMMARY.md  ENTRYPOINT_FIX_COMPLETE.md  FASTMCP_MIGRATION_COMPLETE.md  Final_Review.md  Final_Review_Update.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  (+151 more)
.clinerules/: Main.md
.github/: copilot-instructions.md
.specstory/: archive_openai_client.py  archive_rag_engine.py
backups/: BACKUP_LOG_20250722.md  api_gateway_working_20250722.py  context7_integration_working_20250722.py  engine_working_20250722.py  enhanced_engine_working_20250722.py  mcp_server_working_20250722.py  test_context7_integration_working_20250722.py  test_sequential_integration_working_20250722.py
docs/: mcp_debug_notifications.md
examples/: mcp_debug_example.py
indexes/: projects.json  tasks.json
knowledge_source/: APIs & Services – VoidCat APA – Google Cloud console.md  Cascade MCP Integration.md  Claude20Windows.md  Code Transcript.md  Comprehensive Analysis of Sequential-Thinking MCP.md  Fast-MCP.md  How to configure MCP server on Windows 11 using Claude.md  MCP Server Trigger node documentation  n8n Docs.md  context7-overview.md  eliza_reminder.md  extension-output.md  llms-full.md  n8n Public API UI.md  sequential-thinking.jsonld
tests/: test_e2e_basic_components.py
voidcat_reasoning_core/: __init__.py  enhanced_engine.py  hybrid_vectorizer.py  mcp_debug_utils.py  mcp_server.py  voidcat_persistence.py
vscode-extension/: QUICK_START_GUIDE.md  README.md  __init__.py  api_integration.py  check_vscode_config.js  (+18 more)
(+40 files in other folders)
